deploy/staging/example-app/example-app-env.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app
  labels:
    app: example-app
spec:
  template:
    spec:
      containers:
        - name: example-app
