deploy/staging/example-app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: 'on'
    nginx.ingress.kubernetes.io/proxy-buffers-number: '8'
    nginx.ingress.kubernetes.io/proxy-buffer-size: '32k'
spec:
  ingressClassName: nginx
  rules:
    - host: example.staging.fellesdatakatalog.digdir.no
      http:
        paths:
          - backend:
              service:
                name: example-app
                port:
                  number: 8080
            path: /
            pathType: Prefix
